--- a/EmployeeTest/JenkinsFile
+++ b/EmployeeTest/JenkinsFile
@@ -1,23 +1,23 @@
 pipeline {
   agent any
-  stages {  
+  node {  
       stage('Execute non-virtualized test cases') {
-          steps{
+          //steps{
               totaltest credentialsId: 'CWCC', 
                 environmentId: '5b5f2a71787be73b59238d7b', 
                 folderPath: '', 
                 serverUrl: 'http://cwcc.compuware.com:2020/', 
                 sonarVersion: '6'
-          }
+          //}
       }
       stage('Analyse JUnit'){
-        steps{
+       // steps{
             junit 'TTTReport/JUnitReport.xml'
-        }
+        //}
       }
       //folderPath: 'EmployeeTest/ListOperation/Scenarios/', 
       stage("SonarQube Import"){
-        steps{
+        //steps{
             // Requires SonarQube Scanner 2.8+
             // scannerhome = sonar scanner install in global tool config
             // SonarQubeEnv = sonarqube config name in  setting config
@@ -39,11 +39,11 @@ pipeline {
                 parameters      += " -Dsonar.sources=EmployeeTest/COBOL"
                 bat "${scannerHome}/bin/sonar-scanner" + parameters
             }
-        }
+        //}
       }
       stage("Deploy"){
-        steps{
-        }
+        //steps{
+        //}
       }
   }
 }
