--- a/EmployeeTest/JenkinsFile
+++ b/EmployeeTest/JenkinsFile
@@ -1,5 +1,5 @@
-pipeline {
-  agent any
+//pipeline {
+  //agent any
   node {  
       stage('Execute non-virtualized test cases') {
           //steps{
@@ -46,4 +46,4 @@ pipeline {
         //}
       }
   }
-}
+//}
